--- a/dnwsite/public/index.css
+++ b/dnwsite/public/index.css
@@ -74,7 +74,8 @@
   justify-content: center;
 }
 .phoneImg img {
-  width: 90%;
+  width: 100%;
+  height: auto;
 }
 
 /* 物理设备尺寸大到小 */
@@ -84,9 +85,9 @@
   html{
     font-size: 20px;
   }
-  .warp-area{
-    width: 60%;
-  }
+  /* .warp-area{
+    width: 80%;
+  } */
 }
 /* ipad pro */
 @media screen and (max-width: 1024px){
@@ -129,8 +130,11 @@
   .content-warp{
     align-items: flex-start;
   }
-  .downbox, .phoneImg{
+  .downbox{
     width: 80%;
+  }
+  .phoneImg{
+    width: 60%;
   }
   .footer>p{
     padding: 2px 10px;
@@ -147,8 +151,11 @@
   .content-warp{
     align-items: flex-start;
   }
-  .downbox, .phoneImg{
+  .downbox{
     width: 80%;
+  }
+  .phoneImg{
+    width: 60%
   }
   .rwcode{
     flex-direction: column;
