--- a/dnwsite/public/index.css
+++ b/dnwsite/public/index.css
@@ -75,7 +75,8 @@
 }
 .phoneImg img {
   width: 100%;
-  height: auto;
+  /* height: auto; */
+  height: 100%;
 }
 
 /* 物理设备尺寸大到小 */
@@ -121,7 +122,7 @@
 /* phone-width-max: 414px */
 @media screen and (max-width: 500px){
   html{
-    font-size: 15px !important;
+    font-size: 16px;
   }
   .content-warp{
     background-size: cover;
@@ -143,7 +144,7 @@
 /* dev-min-width 320px */
 @media screen and (max-width: 320px){
   html{
-    font-size: 15px !important;
+    font-size: 14px;
   }
   .content-warp{
     background-size: cover;
@@ -155,7 +156,7 @@
     width: 80%;
   }
   .phoneImg{
-    width: 60%
+    width: 60%;
   }
   .rwcode{
     flex-direction: column;
