--- a/dnwsite/public/common.css
+++ b/dnwsite/public/common.css
@@ -69,6 +69,15 @@ img{
   line-height: 20px;
   padding: 2rem 0;
   border-top: 2px solid #e1e1e1;
+  display: flex;
+  flex-direction: column;
+}
+
+.item-col{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .content-warp{
