--- a/dnwsite/public/about.css
+++ b/dnwsite/public/about.css
@@ -16,17 +16,15 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  color: #404040;
-  padding: 40px 0;
+  color: #333333;
+  padding: 40px 40px;
 }
 .about, .contact{
-  width: 60%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  color: #404040;
 }
 .contact{
   margin-top: 2.5rem;
@@ -39,7 +37,8 @@
   font-size: 0.7rem;
   font-weight:bold;
   padding: 6px 0 20px;
-  color: #c5c5c5;
+  /* color: #c5c5c5; */
+  color: #999999;
 }
 .title-abc>p{
   /* border: 2px solid #FF9500; */
@@ -50,9 +49,13 @@
   margin: 5px auto;
 }
 .docs{
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   font-weight: 400;
   line-height: 21px;
+  text-align: left;
+}
+.contact .docs{
+  color: #666666;
 }
 
 /* 物理设备尺寸大到小 */
@@ -69,7 +72,7 @@
     font-size: 20px;
   }
   .content-warp{
-    background: url("../public/imgs/devbg-phone.png") no-repeat;
+    background: url("../public/imgs/phonepagebg.png") no-repeat;
     background-size: 100% 100%;
     min-height: 1116px;
   }
@@ -102,8 +105,9 @@
   .warp-about{
     width: 80%;
     margin-top: 40px;
+    padding: 0;
   }
-  .about{
+  .about, .contact{
     width: 100%;
     padding: 20px 0;
   }
